re adapt get me function route with tsoa
