# src/routes/user/userClass.ts
@@ -1,0 +1,9 @@
+export interface UserClassGetMeResponse {
+  id: string;
+  email: string;
+  firstName: string;
+  lastName: string;
+  birthDay: string;
+  createdAt?: string;
+  updatedAt?: string;
+}
